@@ -648,6 +648,8 @@ AntennaSetup::AntennaSetup(const string &name) : vexName(name)
 	X = 0.0;
 	Y = 0.0;
 	Z = 0.0;
+	deltaClock = 0.0;
+	deltaClockRate = 0.0;
 	clock.mjdStart = -1e9;
 	clockorder = 1;
 	clock2 = 0.0;
@@ -711,17 +713,18 @@ int AntennaSetup::setkv(const string &key, const string &value)
 	else if(key == "clockOffset" || key == "clock0")
 	{
 		ss >> clock.offset;
-		clock.offset /= 1.0e6;
+		clock.offset /= 1.0e6;	// convert from us to sec
 		clock.mjdStart = 1;
 	}
 	else if(key == "clockRate" || key == "clock1")
 	{
 		ss >> clock.rate;
-		clock.rate /= 1.0e6;
+		clock.rate /= 1.0e6;	// convert from us/sec to sec/sec
 		clock.mjdStart = 1;
 	}
 	else if(key == "clock2")
 	{
+		// FIXME -- is there a us to sec conversion here?
 		ss >> clock2;
 		if(clockorder < 2)
 		{
@@ -730,6 +733,7 @@ int AntennaSetup::setkv(const string &key, const string &value)
 	}
 	else if(key == "clock3")
 	{
+		// FIXME -- is there a us to sec conversion here?
 		ss >> clock3;
 		if(clockorder < 3)
 		{
@@ -738,6 +742,7 @@ int AntennaSetup::setkv(const string &key, const string &value)
 	}
 	else if(key == "clock4")
 	{
+		// FIXME -- is there a us to sec conversion here?
 		ss >> clock4;
 		if(clockorder < 4)
 		{
@@ -746,6 +751,7 @@ int AntennaSetup::setkv(const string &key, const string &value)
 	}
 	else if(key == "clock5")
 	{
+		// FIXME -- is there a us to sec conversion here?
 		ss >> clock5;
 		if(clockorder < 5)
 		{
@@ -757,15 +763,25 @@ int AntennaSetup::setkv(const string &key, const string &value)
 		clock.offset_epoch = parseTime(value);
 		clock.mjdStart = 1;
 	}
-	else if(key == "X")
+	else if(key == "deltaClock")
+	{
+		ss >> deltaClock;
+		deltaClock /= 1.0e6;	// convert from us to sec
+	}
+	else if(key == "deltaClockRate")
+	{
+		ss >> deltaClockRate;
+		deltaClockRate /= 1.0e6;	// convert from us/sec to sec/sec
+	}
+	else if(key == "X" || key == "x")
 	{
 		ss >> X;
 	}
-	else if(key == "Y")
+	else if(key == "Y" || key == "y")
 	{
 		ss >> Y;
 	}
-	else if(key == "Z")
+	else if(key == "Z" || key == "z")
 	{
 		ss >> Z;
 	}
