@@ -27,6 +27,7 @@
  *
  *==========================================================================*/
 
+#include <cstdlib>
 #include <cmath>
 #include "pystream.h"
 
