@@ -11,6 +11,7 @@ Version 2.0
 * Requires difxio 3.0
 * Add support for VLBN "format" -- that is VLBA with no data modulation
 * Use strict parsing by default
+* Add deltaClock and deltaClockRate
 
 Version 0.3
 ~~~~~~~~~~~
